second commit - updated text to CONSTRUCTING

--- a/build.html
+++ b/build.html
@@ -15,7 +15,7 @@
         <main>
             <section>
                 <div class="container">
-                    <h3>BUILDING</h3>
+                    <h3>CONSTRUCTING</h3>
 
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore, nesciunt? Hic nobis cumque voluptates, dolor consequuntur voluptatem accusantium velit quas recusandae fuga quos rerum vitae dolorum fugit commodi libero accusamus.</p>
 
