--- a/run.html
+++ b/run.html
@@ -1,35 +1,32 @@
-<!DOCTYPE>
-<html lang="en-US">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="" content="">
-		<meta name="" content="">
-		<title>RUNNING</title>
-		<link rel="stylesheet" href="" >
-	</head>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="Author" content="Chukwudum Stanley">
+        <meta name="keywords" content="">
+        <meta name="description" content="">
+        <title>BUILDING</title>
+        <link rel="stylesheet" href="build.css">
+    </head>
 	<body>
-		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-		Labore, nesciunt? Hic nobis cumque voluptates, dolor consequuntur voluptatem accusantium velit quas recusandae fuga 
-		quos rerum vitae dolorum fugit commodi libero accusamus. </p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ut, harum at numquam suscipit eveniet reprehenderit, tempore dolores nihil quos debitis mollitia quam? Eius ullam laboriosam nobis voluptate quidem inventore.</p>
+		<div class="container">
+                    <h3>CONSTRUCTING</h3>
 
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta natus repellat ad consequuntur similique autem saepe. Modi ullam reiciendis excepturi cum nesciunt quas ea minima veritatis voluptates
-	    perspiciatis? Nulla, reiciendis.</p>
-		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-		Labore, nesciunt? Hic nobis cumque voluptates, dolor consequuntur voluptatem accusantium velit quas recusandae fuga 
-		quos rerum vitae dolorum fugit commodi libero accusamus. </p>
-			
-		<div>
-            <p class="grg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, saepe dignissimos dolores, aperiam quasi impedit quidem modi quam delectus sequi consequatur sit qui facere asperiores 
-			molestiae aliquam placeat libero! Nihil.</p>
-		</div>
-		<div class="d">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque quod architecto vero. Excepturi magni non at eos commodi aut rem doloremque labore iusto fugit unde odio illum,
-		perferendis molestiae facere!</div>
-		<p>wetin dey sup!</p>
-	
-	
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore, nesciunt? Hic nobis cumque voluptates, dolor consequuntur voluptatem accusantium velit quas recusandae fuga quos rerum vitae dolorum fugit commodi libero accusamus.</p>
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ut, harum at numquam suscipit eveniet reprehenderit, tempore dolores nihil quos debitis mollitia quam? Eius ullam laboriosam nobis voluptate quidem inventore.</p>
+
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta natus repellat ad consequuntur similique autem saepe. Modi ullam reiciendis excepturi cum nesciunt quas ea minima veritatis voluptates perspiciatis? Nulla, reiciendis.</p>
+                </div>
+            </section>
+            <hr>
+            <section>
+                <div>
+                    <p class="grg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, saepe dignissimos dolores, aperiam quasi impedit quidem modi quam delectus sequi consequatur sit qui facere asperiores molestiae aliquam placeat libero! Nihil.</p>
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero culpa repudiandae omnis nam nulla accusamus ullam fugiat vitae, repellat corporis suscipit asperiores nemo ut molestias. Placeat totam accusantium repellat veritatis.</p>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt maxime quam recusandae rerum nemo. Ratione aliquid quisquam atque, sit dolorum amet nam fugiat asperiores sunt quae error ipsa quasi repudiandae.</p>
+                </div>
 	</body>
-
-
-
 </html>
