--- a/fly.html
+++ b/fly.html
@@ -28,6 +28,6 @@
 
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt maxime quam recusandae rerum nemo. Ratione aliquid quisquam atque, sit dolorum amet nam fugiat asperiores sunt quae error ipsa quasi repudiandae.</p>
                 </div>
-				<p>Time to turn up, kindly remain calm.</p>
+				<p>Time to turn up, kindly remain jiggy.</p>
 	</body>
 </html>
