added text to fly.html

--- a/fly.html
+++ b/fly.html
@@ -30,7 +30,7 @@
                 </div>
 
 
-				<p>Time to turn up, kindly remain jiggy.</p>
+				<p>Time to turn up, kindly remain jiggy and relaxed.</p>
 
 	</body>
 </html>
