--- a/build.html
+++ b/build.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head lang="en-US">
         <meta charset="UTF-8">
         <meta name="Author" content="Chukwudum Stanley">
         <meta name="keywords" content="">
